--- a/src/main/resources/jetpacks.yml
+++ b/src/main/resources/jetpacks.yml
@@ -16,6 +16,7 @@ traditional:
   type: ARMOR
   slot: CHESTPLATE
   repairable: false
+  uses: 150
 
   fuel: COAL CHARCOAL
   fuelUseSpeed: 0.25 # per item
@@ -41,6 +42,7 @@ burst:
   type: ARMOR
   slot: CHESTPLATE
   repairable: false
+  uses: 250
 
   fuel: COAL CHARCOAL
   fuelUseSpeed: 0.25 # per item
@@ -66,6 +68,7 @@ teleport:
   type: ARMOR
   slot: CHESTPLATE
   repairable: false
+  uses: 50
 
   fuel: COAL CHARCOAL
   fuelUseSpeed: 0.25 # per item
